--- a/roles/frontend/files/roboshop.conf
+++ b/roles/frontend/files/roboshop.conf
@@ -15,7 +15,7 @@
 
     location /api/user/ { proxy_pass http://usser.roboshop.internal:8080/; }
 
-    location /api/cart/ { proxy_pass http://cart.roboshop.internal:8080/; }
+    location /api/cart/ { proxy_pass http://caart.roboshop.internal:8080/; }
 
     location /api/shipping/ { proxy_pass http://localhost:8080/; }
 
