--- a/roles/redis/tasks/main.yml
+++ b/roles/redis/tasks/main.yml
@@ -13,5 +13,5 @@
     replace: '0.0.0.0'
 - name: start redis
   ansible.builtin.systemd:
-    name: redis-6.2.7
+    name: redis
     state: restarted
