--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -17,3 +17,6 @@
   community.mysql.mysql_info:
     login_user: root
     login_password: RoboShop@1
+- name: reset password
+  debug:
+    msg: resetting the password
