--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -20,5 +20,6 @@
   ignore_errors: yes
   register: mysql_stat
 - name: reset password
+  when:mysql_stat.failed
   debug:
     msg: "{{mysql_stat}}"
