working with conditions

--- a/conditions.yml
+++ b/conditions.yml
@@ -3,6 +3,8 @@
   vars:
       a: abc
       b: 10
+      c: true
+      d: false
   tasks:
     - name: condiiton on strings
       debug:
@@ -21,4 +23,12 @@
       debug:
         msg: b is less than 20
       when:  b < 20
+    - name: boolean
+      debug:
+        msg: condition is true
+      when: c
+    - name: boolean2
+      debug:
+        msg: condition is false
+      when: not d
 
