--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -41,7 +41,7 @@
       ansible.builtin.shell: mysql --connect-expired-password -uroot -p"{{DEFAULT_ROOT_PASSWORD.stdout}}" </tmp/rootpass.sql
 
     - name: check the validate password plugin is uninstalled
-      ansible.builtin.dispatch: echo show plugins | mysql -uroot -pRoboShop@1 | grep validate_password
+      ansible.builtin.shell: echo show plugins | mysql -uroot -pRoboShop@1 | grep validate_password
       register: PLUGIN_INFO
       ignore_errors: yes
     - name: uninstall validate plugin
