--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -6,7 +6,9 @@
 
 - name: instalL MYSQL server
   ansible.builtin.yum:
-    name: mysql-community-server
+    name:
+     - mysql-community-server
+     - MySQL-python
     state: installed
 
 
