added sql total setup

--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -56,5 +56,21 @@
         dest: /tmp/pass-validate.sql
 
     - name: unisntall plugin
-      ansible.builtin.shell: mysql --connect-expired-password -uroot -pRoboShop@1 </tmp/pass-validate.sql
+      community.mysql.mysql_db:
+        state: import
+        name: all
+        target: /tmp/pass-validate.sql
+        login_user: root
+        login_password: RoboShop@1
 
+- name: Download and extract MYSQL
+  include_role:
+    name: common
+    tasks_from: download
+- name: load schema
+  community.mysql.mysql_db:
+    state: import
+    name: all
+    target: /tmp/mysql-main/shipping.sql
+    login_user: root
+    login_password: RoboShop@1
