--- a/roles/common/tasks/download.yml
+++ b/roles/common/tasks/download.yml
@@ -1,5 +1,25 @@
+- name: adding application user
+  ansible.builtin.user:
+    name: roboshop
+    comment: roboshop project application user
+
 - name: Download and extract {{COMPONENT}}
   ansible.builtin.unarchive:
     src: https://github.com/roboshop-devops-project/{{COMPONENT}}/archive/main.zip
     dest: /tmp
     remote_src: yes
+
+- name: cleanup old content
+  ansible.builtin.file:
+    path: /home/roboshop/{{COMPONENT}}
+    state: absent
+
+- name: copy app content
+  ansible.builtin.copy:
+    src: /tmp/{{COMPONENT}}-main/
+    dest: /home/roboshop/{{COMPONENT}}
+    remote_src: yes
+
+
+
+
