making common systemd file maven

--- a/roles/common/tasks/maven.yml
+++ b/roles/common/tasks/maven.yml
@@ -1,6 +1,7 @@
 - name: install Maven
   ansible.builtin.yum:
-    name: maven
+    name:
+     - maven
     state: installed
 - name: adding application user
   ansible.builtin.user:
