--- a/roles/common/tasks/download.yml
+++ b/roles/common/tasks/download.yml
@@ -15,6 +15,7 @@
     state: absent
 
 - name: copy app content
+  become_user: roboshop
   ansible.builtin.copy:
     src: /tmp/{{COMPONENT}}-main/
     dest: /home/roboshop/{{COMPONENT}}
