--- a/roles/common/tasks/maven.yml
+++ b/roles/common/tasks/maven.yml
@@ -3,20 +3,24 @@
     name:
      - maven
     state: installed
+
 - name: adding application user
   ansible.builtin.user:
     name: roboshop
     comment: roboshop project application user
+
 - name: download and extract content {{COMPONENT}}
   include_role:
     name: common
     tasks_from: download
+
 - name: cleanup old content
   ansible.builtin.file:
     path: /home/roboshop/{{COMPONENT}}
     state: absent
 
 - name: copy app content
+  become_user: roboshop
   ansible.builtin.copy:
     src: /tmp/{{COMPONENT}}-main/
     dest: /home/roboshop/{{COMPONENT}}
