--- a/roles/common/tasks/nodejs.yml
+++ b/roles/common/tasks/nodejs.yml
@@ -7,7 +7,7 @@
       - gcc-c++
     state: installed
 
-- name: set up app user, download and extract content {{COMPONENT}}
+- name: set up app user, download and extract {{COMPONENT}} content
   include_role:
     name: common
     tasks_from: download
